# carla-simulator

./: .gitignore  .gitlab-ci-UE5.yml  .gitlab-ci.yml  CHANGELOG.md  CHANGELOG_OPENADS.md  CHANGELOG_OpenADS.md  CMakeLists.txt  Jenkinsfile  README.md  mkdocs.yml  requirements.txt
.github/: ci-ubuntu.yml
.github/workflows/: _ci-ubuntu.yml  ci-ubuntu.yml  ue5_ika.yml
CMake/: CarlaConfig.cmake.in  Common.cmake  Dependencies.cmake  Options.cmake
Docs/: build_carla.md  build_linux_ue5.md  core_map.md  cpp_api_parity.md  index.md  python_api.md  ref_sensors.md  ros2_native_sensors.md  start_quickstart.md  tuto_cpp.md  tutorials.md
Examples/: CMakeLists.txt
Examples/CppClient/: Quickstart.cpp  Quickstart.h
Examples/CppClient/AgentDemo/: CMakeLists.txt  README.md  main.cpp
Examples/CppClient/Standalone/: CMakeLists.txt  README.md  main.cpp
Examples/QtClient/: CMakeLists.txt  main.cpp
Examples/QtClient/include/: CarlaStudioPlugin.h
LibCarla/: CMakeLists.txt
LibCarla/source/carla/: ThreadPool.h
LibCarla/source/carla/agents/navigation/: BasicAgent.cpp  BasicAgent.h  BehaviorAgent.cpp  BehaviorAgent.h  ConstantVelocityAgent.cpp  ConstantVelocityAgent.h  GlobalRoutePlanner.cpp  GlobalRoutePlanner.h  LocalPlanner.cpp  LocalPlanner.h  Misc.cpp  Misc.h  PIDController.cpp  PIDController.h  Types.h
LibCarla/source/carla/client/: Client.h  Map.cpp  Map.h  Vehicle.cpp  Vehicle.h  World.cpp  World.h
LibCarla/source/carla/client/detail/: Client.cpp  Client.h  Simulator.h
LibCarla/source/carla/geom/: GeoLocation.h  GeoProjection.cpp  GeoProjection.h  GeoProjectionsParams.h
LibCarla/source/carla/multigpu/: listener.cpp  primary.cpp  primary.h  router.cpp  secondary.cpp  secondary.h
LibCarla/source/carla/opendrive/parser/: GeoReferenceParser.cpp
LibCarla/source/carla/road/: Map.cpp  Map.h  MapBuilder.h  MapData.h
LibCarla/source/carla/ros2/: FastDDSAliases.h  ROS2.cpp  ROS2.h  ROS2CallbackData.h
LibCarla/source/carla/ros2/publishers/: BasePublisher.h  BasicPublisher.cpp  BasicPublisher.h  CameraIntrinsics.h  CarlaCameraPublisher.cpp  CarlaCameraPublisher.h  CarlaClockPublisher.cpp  CarlaClockPublisher.h  CarlaCollisionPublisher.cpp  CarlaCollisionPublisher.h  CarlaDVSCameraPublisher.cpp  CarlaDVSCameraPublisher.h  CarlaDepthCameraPublisher.h  CarlaGNSSPublisher.cpp  CarlaGNSSPublisher.h  CarlaIMUPublisher.cpp  CarlaIMUPublisher.h  CarlaISCameraPublisher.h  CarlaLidarPublisher.cpp  CarlaLidarPublisher.h  CarlaNormalsCameraPublisher.h  CarlaOdometryPublisher.cpp  CarlaOdometryPublisher.h  CarlaOpticalFlowCameraPublisher.cpp  CarlaOpticalFlowCameraPublisher.h  CarlaPointCloudPublisher.cpp  CarlaPointCloudPublisher.h  CarlaRGBCameraPublisher.h  CarlaRadarPublisher.cpp  CarlaRadarPublisher.h  CarlaSSCameraPublisher.h  CarlaSemanticLidarPublisher.cpp  CarlaSemanticLidarPublisher.h  CarlaTransformPublisher.cpp  CarlaTransformPublisher.h  DvsEventEncoding.h  ImuMath.h  OpticalFlowEncoding.h  PointCloudFieldsLayout.h  PublisherImpl.h  (+2 more)
LibCarla/source/carla/ros2/subscribers/: AckermannControlConversion.h  AckermannControlSubscriber.cpp  AckermannControlSubscriber.h  BaseSubscriber.h  CarlaEgoVehicleControlSubscriber.cpp  SubscriberImpl.h
LibCarla/source/carla/rpc/: Server.h  VehiclePhysicsControl.h  VehicleTelemetryData.h  WheelPhysicsControl.h  WheelTelemetryData.h
LibCarla/source/carla/sensor/: SensorRegistry.h
LibCarla/source/carla/streaming/: EndPoint.h
LibCarla/source/carla/streaming/detail/tcp/: Client.cpp  Client.h  ServerSession.cpp  ServerSession.h
LibCarla/source/carla/trafficmanager/: ALSM.cpp  ALSM.h  Constants.h  LocalizationStage.cpp  LocalizationStage.h  MotionPlanStage.cpp  MotionPlanStage.h  Parameters.cpp  Parameters.h  TrafficManager.h  TrafficManagerBase.h  TrafficManagerClient.h  TrafficManagerGeometry.cpp  TrafficManagerGeometry.h  TrafficManagerLocal.cpp  TrafficManagerLocal.h  TrafficManagerRemote.cpp  TrafficManagerRemote.h  TrafficManagerServer.h
LibCarla/source/test/: Buffer.cpp
LibCarla/source/test/client/: test_agents.cpp  test_image.cpp  test_opendrive.cpp  test_recurrent_shared_future.cpp  test_road_regression_9565.cpp  test_traffic_manager.cpp
LibCarla/source/test/common/: test_ackermann_conversion.cpp  test_boost_asio_timer.cpp  test_boost_rtree.cpp  test_buffer.cpp  test_camera_intrinsics.cpp  test_camera_publisher_types.cpp  test_dvs_event_encoding.cpp  test_geo_projection.cpp  test_imu_compass.cpp  test_optical_flow_encoding.cpp  test_point_cloud_fields.cpp  test_radar_polar_to_cartesian.cpp  test_ros2_subscriber_lifetime.cpp  test_streaming.cpp  test_transform_quaternion.cpp  test_vector3D.cpp  test_vehicle_telemetry_data.cpp
LibCarla/source/test/server/: test_benchmark_streaming.cpp
LibCarla/source/util/: disable-ue4-macros.h  enable-ue4-macros.h
PythonAPI/: CMakeLists.txt
PythonAPI/carla/: CMakeLists.txt.in  requirements.txt
PythonAPI/carla/include/: PythonAPI.h
PythonAPI/carla/src/: Actor.cpp  Client.cpp  Control.cpp  Geometry.cpp  Map.cpp  TrafficManager.cpp  World.cpp
PythonAPI/docs/: map.yml
PythonAPI/examples/: hss_lidar_top_down.py  manual_control_fisheye.py  recorder_replay.py  requirements.txt
PythonAPI/examples/ros2/: ros2_native.py  stack.json  stack_cameras.json
PythonAPI/test/: requirements.txt  smoke_test_list.txt
PythonAPI/test/API/: prop_control.py
PythonAPI/test/smoke/: test_geoconversion.py  test_replay_no_actor_aliasing.py  test_sensor_tick_time.py  test_traffic_manager_large_vehicle.py  test_traffic_manager_sync_step.py  test_vehicle_telemetry.py
PythonAPI/test/unit/: test_boost_version.py  test_numpy_compat.py  test_transform.py
PythonAPI/util/: requirements.txt
Unreal/: CMakeLists.txt
Unreal/CarlaUnreal/: .gitignore
Unreal/CarlaUnreal/Config/: DefaultEngine.ini  DefaultGame.ini
Unreal/Package/: CopyCarlaAdditionalFiles.cmake
Util/Docker/: Base.Dockerfile  Release.Dockerfile  build.sh
Util/Docker/client/: Client.Dockerfile  entrypoint.sh
Util/SetupUtils/: InstallPrerequisites.bat  InstallPrerequisites.sh  MergeContentOverlay.py
(+81 files in other folders)
